# EEE-RAS-ROS-26

./: Task_3  info.txt  main.py
Task_10/: README.md
Task_11/: README.md  fleet_emulator.py  traffic_manager.py
Task_12/: README.md  fleet_emulator.py  traffic_manager.py
Task_13/: README.md  fleet_emulator.py  setup.py  traffic_manager.py  traffic_system.launch.py
Task_14/: README.md  autonomous_mover.py  gazebo_autonomous.launch.py  package.xml  setup.py  task14_pkg  task14_world.sdf
Task_15/: 06-flexible.urdf  README.md
Task_16/config/: gz_bridge.yaml
Task_16/task16_starter_robot/launch/: robot.launch.py
Task_16/urdf/: robot.gazebo
Task_2/: problem1.py  problem2.py  problem3.py
Task_3/: problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py
Task_4/: 4problem_1.py  4problem_2.py  4problem_3.py  4problem_5.py  4problem_6.py  Screencast from 2026-04-18 00-21-14.webm
Task_5/: Tic-Tac-Toe.py
Task_6/: 6problem_1.py  6problem_2.py  6problem_3.py  6problem_4.py  6problem_5.py
Task_7/: 7problem_1.py  7problem_2.py  7problem_3.py  7problem_4.py  7problem_5.py
Task_8/: 8 B. Spy Detected!.py  8 D. Sum.py  8 E. Division.py  8 F. Team.py  8 G. Tram.py  8 H. Plus One on the Subset.py  8 I. George and Accommodation.py  8 J. Borze.py
