<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>task14_pkg</name>

  <version>0.0.0</version>

  <description>
    ROS 2 Gazebo autonomous robot simulation
  </description>

  <maintainer email="rodaina-sabry@todo.todo">
    rodaina-sabry
  </maintainer>

  <license>Apache-2.0</license>


  <!-- ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Gazebo -->
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- TurtleBot3 -->
  <exec_depend>turtlebot3_gazebo</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>